--- a/index.html
+++ b/index.html
@@ -2635,7 +2635,10 @@
 
         if (result) {
           resultDiv.innerHTML = `
-                    <p class="available">Data is available</p>
+                    <p class="available"><strong>"आपकी Family ID में बैंक खाता Update नहीं है "
+कृपया अपनी Family ID में बैंक खाता Update करवाने के लिए अपने गांव के CPLO रिंकू सैनी (9671203033) से संपर्क करे
+धन्यवाद<strong>
+</p>
                     <table>
                         <tr>
                             <th>Name</th>
@@ -2651,7 +2654,11 @@
                 `;
         } else {
           resultDiv.innerHTML = `
-                    <p class="not-available"><strong>No record found, please contact CPLO Rinku Saini (9671203033)</strong></p>
+                    <p class="not-available"><strong>" No Record Found "
+
+अधिक जानकारी के लिए अपने गांव के CPLO रिंकू सैनी (9671203033) से संपर्क करे
+धन्यवाद
+</strong></p>
                 `;
         }
       }
