--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Find Family ID</title>
+    <title>Search Family ID</title>
     <style>
       body {
         background-color: white;
@@ -58,7 +58,7 @@
   </head>
   <body>
     <div class="search-container">
-      <h1>Find Family ID</h1>
+      <h1>Search Family ID</h1>
       <input type="text" id="searchField" placeholder="Enter Family ID" />
       <button onclick="searchFamilyID()">Search</button>
       <div class="result" id="result"></div>
